--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
             board.appendChild(temp)
           }
          }
-          
+          function showReaction(type, clickedBox){
+            clickedBox.classList.add(type)
+            if(type !=="success"){
+                setTimeout(function(){
+                    clickedBox.classList.remove(type)
+                }, 800)
+            }
+
+          }
+
           const box = document.createElement("div")
           box.classList.add("box")
 
@@ -31,7 +40,7 @@
         
           let nb = 1 /*on déclare une variable nb qui représentera le numéro de la boite attendue et qui s'incrémentera en cas de clic valide ! */
 
-          for(let i = 1; i <= 5; i++){
+          for(let i = 1; i <= 10; i++){
             const newbox = box.cloneNode()
             newbox.innerText = i
             board.appendChild(newbox)
@@ -42,13 +51,15 @@
                     newbox.classList.add("box-valid")
 
                     if(nb == board.children.length){
-                        alert("VICTOIRE!")
+                        board.querySelectorAll(".box").forEach(function(box){
+                            showReaction("success", box)
+                        })
                     }
                     nb++
                  }
 
                     else if(i > nb){
-                        alert("Erreur, recommencez !")
+                        showReaction("error", newbox)
                         nb = 1
                         board.querySelectorAll(".box-valid").forEach(function(validBox){
                             validBox.classList.remove("box-valid")
@@ -56,7 +67,7 @@
                  }
 
                     else{
-                        alert("Case déjà cliquée !")
+                        showReaction("notice", newbox)
                     }
             })
           }
